@@ -26,8 +26,6 @@
 
 i.parse.plot.params <- function(graph, params) {
   
-  ## TODO: check that names are present
-
   ## store the arguments
   p <- list(vertex=list(), edge=list(), plot=list())
   for (n in names(params)) {
@@ -42,6 +40,24 @@ i.parse.plot.params <- function(graph, params) {
     }
   }
 
+  ## check that names are present
+
+  mis <- ! names(p[["vertex"]]) %in% names(i.default.values$vertex) 
+  if (any(mis)) {
+    stop("Unknown vertex parameters: ",
+         paste(sep=", ", collapse=", ", names(p[["vertex"]])[mis]))
+  }
+  mis <- ! names(p[["edge"]]) %in% names(i.default.values$edge) 
+  if (any(mis)) {
+    stop("Unknown edge parameters: ",
+         paste(sep=", ", collapse=", ", names(p[["edge"]])[mis]))
+  }
+  mis <- ! names(p[["plot"]]) %in% names(i.default.values$plot) 
+  if (any(mis)) {
+    stop("Unknown plot parameters: ",
+         paste(sep=", ", collapse=", ", names(p[["plot"]]) [ mis ]))
+  }
+  
   func <- function(type, name, range=NULL, dontcall=FALSE) {
     if (! type %in% names(p)) {
       stop("Invalid plot option type")
