@@ -1,6 +1,11 @@
+2007-10-29  Gabor Csardi  <csardi@rmki.kfki.hu>
+
+	* interfaces/R/igraph/R/plot.common.R (i.parse.plot.params) :
+	check the existance of graphical arguments
+
 2007-10-25  Gabor Csardi  <csardi@rmki.kfki.hu>
 
-	* interfaces/E/src/rinterface.c.in (R_igraph_warning_handler)
+	* interfaces/R/src/rinterface.c.in (R_igraph_warning_handler)
 	(R_igraph_before, R_igraph_before2, R_igraph_after, R_igraph_after2) :
 	proper warnings added
 
